<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrderDetails" 
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectVendor" />
    
    <Spinner android:id="@+id/vendors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectProd"
        android:layout_marginTop="25dp" />
    
    <Spinner android:id="@+id/productList1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/product1Qty"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/qty"/>
    
    <Spinner android:id="@+id/productList2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/product2Qty"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/qty"/>
    
    <Spinner android:id="@+id/productList3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText android:id="@+id/product3Qty"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/qty"/>
    
    <LinearLayout android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_marginTop="25dp">

        <Button android:id="@+id/orderPlaced"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/orderPlaced"/>    

	<Button android:id="@+id/orderCancelled"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/orderCancelled"/>
	
    </LinearLayout>
	
</LinearLayout>
