<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrderCancelled" 
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/orderCancelReason"
        android:id="@+id/orderCancelReason"
        android:layout_marginTop="30dp" />
    
    <LinearLayout android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        
        <Button android:id="@+id/saveOdrCanReason"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:layout_marginLeft="30dp"/>
        
        <Button android:id="@+id/logoutBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title_activity_logout" 
            android:layout_marginLeft="25dp" />
    </LinearLayout>

</LinearLayout>
