<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrderPlaced" 
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        
        android:layout_marginTop="20dp"
        android:id="@+id/paymentRadio">
        
        <RadioButton android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:checked="true"
            android:layout_marginLeft="30dp"/>
        
        <RadioButton android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:layout_marginLeft="30dp"/>
        
    </RadioGroup>
    
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/totalAmt"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/discount"
        android:text="@string/discount"
        android:textColor="#ff0000"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    
    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/netAmt"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>
    
    <Button android:id="@+id/saveOrder"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/save"
        android:layout_marginTop="20dp"/>
    
    
    
</LinearLayout>
